--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -63,7 +63,10 @@ components:
           maxLength: 20
         url:
           type: string
+          description: Url string in binary format
           format: binary
+          minLength: 0
+          maxLength: 100
         uid_owner:
           $ref: "#/components/schemas/user/properties/id"
             
@@ -171,6 +174,7 @@ paths:
               description: username schemas
               properties:
                 username:
+                  type: string
                   description: User name structure as its defined in user/properties/name
                   pattern: '[a-zA-Z0-9]'
                   example: 'Maria'
