--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -63,10 +63,7 @@ components:
           maxLength: 20
         url:
           type: string
-          description: Url string in binary format
           format: binary
-          minLength: 0
-          maxLength: 100
         uid_owner:
           $ref: "#/components/schemas/user/properties/id"
             
@@ -174,7 +171,6 @@ paths:
               description: username schemas
               properties:
                 username:
-                  type: string
                   description: User name structure as its defined in user/properties/name
                   pattern: '[a-zA-Z0-9]'
                   example: 'Maria'
@@ -244,12 +240,15 @@ paths:
           application/json:
             schema:
               type: object
-              description: identifier object
+              description: request object
               properties:
-                identifier:
-                  type: integer
-                  description: User identifier as in user/properties/id
-                  example: 12
+                username:
+                  type: string
+                  description: User name structure as its defined in user/properties/name
+                  pattern: '[a-zA-Z0-9]'
+                  example: 'Maria'
+                  minLength: 3
+                  maxLength: 16
         required: true
       responses:
         '201':
@@ -340,10 +339,13 @@ paths:
               type: object
               description: request object
               properties:
-                identifier:
-                  type: integer
-                  description: User identifier as in user/properties/id
-                  example: 12
+                newUsername:
+                  type: string
+                  description: User name structure as its defined in user/properties/name
+                  pattern: '[a-zA-Z0-9]'
+                  example: 'Maria'
+                  minLength: 3
+                  maxLength: 16
       responses:
         '201':
           description: User identifier has been banned
@@ -421,9 +423,20 @@ paths:
       description: Upload a photo in your account
       requestBody:
         content:
-          application/json:
+          image/*:
             schema:
-              $ref: "#/components/schemas/photo"
+              description: Image content
+              type: object
+              properties:
+                photo_data:
+                  description: "Photo binary data"
+                  type: string
+                  minLength: 0
+                  maxLength: 100
+                  format: binary
+                  example: "010110010"
+              example: 
+                photo_data: "010110010"
         required: true
       responses:
         '201':
