--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -341,13 +341,14 @@ paths:
               type: object
               description: request object
               properties:
-                newUsername:
+                username:
                   type: string
                   description: User name structure as its defined in user/properties/name
                   pattern: '[a-zA-Z0-9]'
                   example: 'Maria'
                   minLength: 3
                   maxLength: 16
+        required: true
       responses:
         '201':
           description: User identifier has been banned
@@ -357,7 +358,7 @@ paths:
                 type: object
                 description: request Object
                 properties:
-                  identifier:
+                  message:
                     type: string
                     description: Log
                     example: "Success"
@@ -475,12 +476,15 @@ paths:
             schema:
               # LIKES REQUIRES UID, BACKEND MANAGEMENT
               type: object
-              description: photo identifier
+              description: user identifier
               properties:
-                identifier:
-                  type: integer
-                  description: User identifier as in user/properties/id
-                  example: 12
+                username:
+                  type: string
+                  description: User name
+                  pattern: '[a-zA-Z0-9]'
+                  example: 'Maria'
+                  minLength: 3
+                  maxLength: 16
         required: true
       responses:
         '201':
